# howtovulkan-rs

./: .gitignore  Cargo.toml  README.md  a.rdc  flake.nix  howtovulkan.REMOVED.git-id  package.sh
assets/: shader.frag  shader.vert
shaders/: outline.frag  outline.vert  shader.frag  shader.vert  wireframe.frag  wireframe.vert
src/: extra_ktx.rs  gl_format.rs  main.rs  model.rs  shader.rs  vk_format.rs  window.rs
