[package]
name = "howtovulkan"
version = "0.1.0"
edition = "2024"

[package.metadata.appimage]
auto_link = true

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
glm = "0.3.0"
inline-spirv = "0.2.1"
ktx = "0.3.2"
nalgebra-glm = "0.21.0"
png = "0.18.0"
tobj = "4.0.3"
vk-mem = "0.5.0"
winit = "0.30.12"
