[package]
name = "howtovulkan-rs"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://codeberg.org/ceridwen15/howtovulkan-rs"
readme = "README.md"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
glm = "0.3.0"
inline-spirv = "0.2.1"
ktx = "0.3.2"
nalgebra-glm = "0.21.0"
tobj = "4.0.3"
vk-mem = "0.5.0"
winit = "0.30.12"

[features]
no-layers = []
